src/objects/ACCL__Flatten_Org_Unit_Hierarchy__c.object
<CustomObject>
    <description>This SObject holds node org unit hierarchy information for the Customer Segmentation functionality.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Account assigned to the org unit of the hierarchy node.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Flatten Org Unit Hierarchies</relationshipLabel>
        <relationshipName>Flatten_Org_Unit_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Node_Level__c</fullName>
        <description>Reference to the level of the node in the hierarchy.</description>
        <label>Node Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit_Level_01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Org Unit level hierarchy.</description>
        <label>Org Unit 01</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Flatten Org Unit Hierarchies (Org Unit 01)</relationshipLabel>
        <relationshipName>Flatten_Org_Unit_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit_Level_02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Org Unit level hierarchy.</description>
        <label>Org Unit 02</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Flatten Org Unit Hierarchies (Org Unit 02)</relationshipLabel>
        <relationshipName>Flatten_Org_Unit_Hierarchies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit_Level_03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Org Unit level hierarchy.</description>
        <label>Org Unit 03</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Flatten Org Unit Hierarchies (Org Unit 03)</relationshipLabel>
        <relationshipName>Flatten_Org_Unit_Hierarchies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit__c</fullName>
        <description>Reference to the Org Unit of the hierarchy node.</description>
        <label>Org Unit</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Flatten Org Unit Hierarchies</relationshipLabel>
        <relationshipName>Flatten_Org_Unit_Hierarchies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ACCL__Result_Level__c</fullName>
        <description>Defines the level to retrieve customers from.</description>
        <label>Result Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                    <default>true</default>
                    <label>Store</label>
                </value>
                <value>
                    <fullName>Trade Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__UpsertID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Id to upsert records from Accenture Cloud Processing Service.</description>
        <externalId>true</externalId>
        <label>UpsertID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Flatten Org Unit Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Org_Unit__c</columns>
        <columns>ACCL__Org_Unit_Level_01__c</columns>
        <columns>ACCL__Org_Unit_Level_02__c</columns>
        <columns>ACCL__Org_Unit_Level_03__c</columns>
        <columns>ACCL__Org_Unit_Level_04__c</columns>
        <columns>ACCL__Org_Unit_Level_05__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FOUH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flatten Org Unit Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>